# voice-keyboard

./: .gitignore  README.md
rust/: Cargo.toml
rust/crates/audio/: Cargo.toml
rust/crates/audio/examples/: record.rs  resample.rs
rust/crates/audio/src/: device.rs  lib.rs  peaks.rs  recorder.rs  resample.rs
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/keyctl/: Cargo.toml
rust/crates/keyctl/examples/: push-to-write.rs
rust/crates/keyctl/src/: lib.rs
rust/crates/transcribe/: Cargo.toml
rust/crates/transcribe/examples/: transcribe.rs
rust/crates/transcribe/src/: lib.rs
