[workspace]
resolver = "2"
members = ["crates/keyctl", "crates/audio", "crates/cli", "crates/transcribe"]

[workspace.dependencies]
# Common dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"

# Audio dependencies
cpal = "0.15.3"
hound = "3.5.0"
rubato = "0.15"

# CLI dependencies
clap = "4.5.31"

# Other
lazy_static = "1.5"
cc = "1.2"
whisper-rs = "0.14"
chrono = "0.4"
num_cpus = "1.0"

[workspace.dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Com",
    "Win32_UI_Shell",
]
