[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = { workspace = true }
hound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rubato = { workspace = true }
clap = { workspace = true }

[[example]]
name = "record"
path = "examples/record.rs"

[[example]]
name = "resample"
path = "examples/resample.rs"

[dev-dependencies]
tempfile = "3.0"
ctrlc = "3.4"
